--- a/cssPancake.css
+++ b/cssPancake.css
@@ -104,6 +104,11 @@ body, html {
 #map {
 	max-width: 100%;
 	max-height: 100%;
+	border-radius: 1rem;
+}
+
+#map:hover {
+	transform: scale(1.5);
 }
 
 #checkUsOut {
